daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N27_bad_review_blind/T1.hex
86781b6461796c696768742e617574682e7472616e7363726970742e763658406f0af6a86469d130d60c866d321818c2c54e17fedc0371374b7ef1bdd190942d72b9614a08b0bde7f8c3ba4806bcf71acc97d44c16b71eabd4d46688b6509c785840238720bd168dfdc2877b6d1530a6c590d34a172edf5f6e7b5e4a3d3a87aa8f94d42bb1e91681f4abd20cb72315ce9d6acbbabb4c2019ed738209b824d079433358402b91de9e4143624ec270159a6f074b746551c37e202c6a6e4e74d9fd77214638eb31d5df33a67feb49b6503b52aa10be332be1eb3ae7f15f8962810f2765982758203a74b74d4d90774a96e58f4c87e0aec657d198a866923eaf12295843171161eb58408d33627f469c380f277f4fa0d3224b10fe67414d6ff6a9712a6bf619bccb0d2c9afaf8ecc42f2b4b7ebaae0254e5e05214c5672c5e0a749766b3998d8f612b69
